--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <h1>Shit Alex Knowles Says</h1>
     <h3>The S.A.K.S. Initiative</h3>
     <hr>
+    <p>Tupac back</p>
+    <p>That's what she said</p>
+    <p>Preciate it!</p>
     <p>More to come...</p>
   <body>
 </html>
